--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-NGROK_URL=
+TWILIO_ACCOUNT_SID=AC18643bd577d201ad34b69161f04d5fdc
+TWILIO_AUTH_TOKEN=e4cbb03d8a0f0f115056a2d919dd5e57
+NGROK_URL=ngrok http 80
